[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-loki-central-logger"
version = "0.1.0"
description = "Dead-simple centralized logging to Grafana Loki — drop-in handler or push_log()."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []   # zero dependencies — stdlib only

keywords = ["loki", "grafana", "logging", "observability", "centralized"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/your-org/tb-loki-central-logger"
Issues   = "https://github.com/your-org/tb-loki-central-logger/issues"

[tool.setuptools]
package-dir = { "tb_loki_central_logger" = "." }
packages = ["tb_loki_central_logger"]
