[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-loki-central-logger"
version = "0.2.1"
description = "Grafana Loki logging — async httpx only: LokiClient, push_log, LokiHandler."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]

keywords = ["loki", "grafana", "logging", "observability", "centralized"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/your-org/tb-loki-central-logger"
Issues   = "https://github.com/your-org/tb-loki-central-logger/issues"

[tool.setuptools]
package-dir = { "tb_loki_central_logger" = "app" }
packages = ["tb_loki_central_logger"]
